crates/shell-parser/tests/snapshots/parser_snapshots__compound__and_list.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"make && make install\")"
---
And(
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "make",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "make",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "install",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
)
