crates/shell-parser/tests/snapshots/parser_snapshots__compound__brace_group.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"{ echo a; echo b; }\")"
---
BraceGroup(
    Sequence(
        [
            Simple(
                SimpleCommand {
                    assignments: [],
                    words: [
                        Word {
                            parts: [
                                Literal(
                                    "echo",
                                ),
                            ],
                        },
                        Word {
                            parts: [
                                Literal(
                                    "a",
                                ),
                            ],
                        },
                    ],
                    redirections: [],
                },
            ),
            Simple(
                SimpleCommand {
                    assignments: [],
                    words: [
                        Word {
                            parts: [
                                Literal(
                                    "echo",
                                ),
                            ],
                        },
                        Word {
                            parts: [
                                Literal(
                                    "b",
                                ),
                            ],
                        },
                    ],
                    redirections: [],
                },
            ),
        ],
    ),
)
