crates/shell-parser/tests/snapshots/parser_snapshots__compound__case_basic.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"case $x in a) echo a;; b) echo b;; *) echo other;; esac\")"
---
Case {
    word: Word {
        parts: [
            Parameter(
                "x",
            ),
        ],
    },
    arms: [
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Literal(
                            "a",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "a",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Literal(
                            "b",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "b",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Glob(
                            "*",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "other",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
    ],
}
