crates/shell-parser/tests/snapshots/parser_snapshots__compound__for_loop.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"for x in a b c; do echo $x; done\")"
---
For {
    var: "x",
    words: [
        Word {
            parts: [
                Literal(
                    "a",
                ),
            ],
        },
        Word {
            parts: [
                Literal(
                    "b",
                ),
            ],
        },
        Word {
            parts: [
                Literal(
                    "c",
                ),
            ],
        },
    ],
    body: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Parameter(
                            "x",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
}
