crates/shell-parser/tests/snapshots/parser_snapshots__compound__function_definition.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"greet() { echo hello; }\")"
---
FunctionDef {
    name: "greet",
    body: BraceGroup(
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "echo",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "hello",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    ),
}
