crates/shell-parser/tests/snapshots/parser_snapshots__compound__if_then_fi.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"if true; then echo yes; fi\")"
---
If {
    condition: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "true",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    then_branch: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "yes",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    elif_branches: [],
    else_branch: None,
}
