crates/shell-parser/tests/snapshots/parser_snapshots__compound__or_list.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"test -f file || echo missing\")"
---
Or(
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "test",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "-f",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "file",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "missing",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
)
